css/style.css
/* ... */
body {
  line-height: 1;
  color: #000;
  background: #fff;
}
ol,
ul {
  list-style: none;
}
table {
  border-collapse: separate;
  border-spacing: 0;
  vertical-align: middle;
}
caption,
th,
td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}
a img {
  border: none;
}
input,
button {
  margin: 0;
  padding: 0;
}
input::-moz-focus-inner,
button::-moz-focus-inner {
  border: 0;
  padding: 0;
}
html,
body,
#container {
  height: 100%;
}
body {
  background: #eee;
  font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-text-size-adjust: 100%;
}
.outer {
  max-width: 1220px;
  margin: 0 auto;
  padding: 0 20px;
}
.outer:before,
.outer:after {
  content: "";
  display: table;
}
.outer:after {
  clear: both;
}
.inner {
  display: inline;
  float: left;
  width: 98.33333333333333%;
  margin: 0 0.833333333333333%;
}
.left,
.alignleft {
  float: left;
}
.right,
.alignright {
  float: right;
}
.clear {
  clear: both;
}
#container {
  position: relative;
}
.mobile-nav-on {
  overflow: hidden;
}
#wrap {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: 0.2s ease-out;
  -moz-transition: 0.2s ease-out;
  -ms-transition: 0.2s ease-out;
  transition: 0.2s ease-out;
  z-index: 1;
  background: #eee;
}
.mobile-nav-on #wrap {
  left: 280px;
}
@media screen and (min-width: 768px) {
  #main {
    display: inline;
    float: left;
    width: 73.33333333333333%;
    margin: 0 0.833333333333333%;
  }
}
.article-date,
.article-category-link,
.archive-year,
.widget-title {
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: #999;
  margin-bottom: 1em;
  margin-left: 5px;
  line-height: 1em;
  text-shadow: 0 1px #fff;
  font-weight: bold;
}
.article-inner,
.archive-article-inner {
  background: #fff;
  -webkit-box-shadow: 1px 2px 3px #ddd;
  box-shadow: 1px 2px 3px #ddd;
  border: 1px solid #ddd;
  border-radius: 3px;
}
.article-entry h1,
.widget h1 {
  font-size: 2em;
}
.article-entry h2,
.widget h2 {
  font-size: 1.5em;
}
.article-entry h3,
.widget h3 {
  font-size: 1.3em;
}
.article-entry h4,
.widget h4 {
  font-size: 1.2em;
}
.article-entry h5,
.widget h5 {
  font-size: 1em;
}
.article-entry h6,
.widget h6 {
  font-size: 1em;
  color: #999;
}
.article-entry hr,
.widget hr {
  border: 1px dashed #ddd;
}
.article-entry strong,
.widget strong {
  font-weight: bold;
}
.article-entry em,
.widget em,
.article-entry cite,
.widget cite {
  font-style: italic;
}
.article-entry sup,
.widget sup,
.article-entry sub,
.widget sub {
  font-size: 0.75em;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
.article-entry sup,
.widget sup {
  top: -0.5em;
}
.article-entry sub,
.widget sub {
  bottom: -0.2em;
}
.article-entry small,
.widget small {
  font-size: 0.85em;
}
.article-entry acronym,
.widget acronym,
.article-entry abbr,
.widget abbr {
  border-bottom: 1px dotted;
}
.article-entry ul,
.widget ul,
.article-entry ol,
.widget ol,
.article-entry dl,
.widget dl {
  margin: 0 20px;
  line-height: 1.6em;
}
.article-entry ul ul,
.widget ul ul,
.article-entry ol ul,
.widget ol ul,
.article-entry ul ol,
.widget ul ol,
.article-entry ol ol,
.widget ol ol {
  margin-top: 0;
  margin-bottom: 0;
}
.article-entry ul,
.widget ul {
  list-style: disc;
}
.article-entry ol,
.widget ol {
  list-style: decimal;
}
.article-entry dt,
.widget dt {
  font-weight: bold;
}
#header {
  height: 300px;
  position: relative;
  border-bottom: 1px solid #ddd;
}
#header:before,
#header:after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  height: 40px;
}
#header:before {
  top: 0;
  background: -webkit-linear-gradient(rgba(0,0,0,0.2), transparent);
  background: -moz-linear-gradient(rgba(0,0,0,0.2), transparent);
  background: -ms-linear-gradient(rgba(0,0,0,0.2), transparent);
  background: linear-gradient(rgba(0,0,0,0.2), transparent);
}
#header:after {
  bottom: 0;
  background: -webkit-linear-gradient(transparent, rgba(0,0,0,0.2));
  background: -moz-linear-gradient(transparent, rgba(0,0,0,0.2));
  background: -ms-linear-gradient(transparent, rgba(0,0,0,0.2));
  background: linear-gradient(transparent, rgba(0,0,0,0.2));
}
#header-outer {
  height: 100%;
  position: relative;
}
#header-inner {
  position: relative;
  overflow: hidden;
}
#banner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url("images/banner.jpg") center #000;
  background-size: cover;
  z-index: -1;
}
#header-title {
  text-align: center;
  height: 40px;
  position: absolute;
  top: 50%;
  left: 0;
  margin-top: -20px;
}
#logo,
#subtitle {
  text-decoration: none;
  color: #fff;
  font-weight: 300;
  text-shadow: 0 1px 4px rgba(0,0,0,0.3);
}
#logo {
  font-size: 40px;
  line-height: 40px;
  letter-spacing: 2px;
}
#subtitle {
  font-size: 16px;
  line-height: 16px;
  letter-spacing: 1px;
}
#subtitle-wrap {
  margin-top: 16px;
}
#main-nav {
  float: left;
  margin-left: -15px;
}
.nav-icon,
.main-nav-link {
  float: left;
  color: #fff;
  opacity: 0.6;
  text-decoration: none;
  text-shadow: 0 1px rgba(0,0,0,0.2);
  -webkit-transition: opacity 0.2s;
  -moz-transition: opacity 0.2s;
  -ms-transition: opacity 0.2s;
  transition: opacity 0.2s;
  display: block;
  padding: 20px 15px;
}
.nav-icon:hover,
.main-nav-link:hover {
  opacity: 1;
}
.nav-icon {
  text-align: center;
  font-size: 14px;
  width: 14px;
  height: 14px;
  padding: 20px 15px;
  position: relative;
  cursor: pointer;
}
.main-nav-link {
  font-weight: 300;
  letter-spacing: 1px;
}
@media screen and (max-width: 479px) {
  .main-nav-link {
    display: none;
  }
}
#main-nav-toggle {
  display: none;
}
@media screen and (max-width: 479px) {
  #main-nav-toggle {
    display: block;
  }
}
#sub-nav {
  float: right;
  margin-right: -15px;
}
/* ... */

